--- a/main.css
+++ b/main.css
@@ -1,16 +1,15 @@
 :root{
     --primary: #8c38ff;
     --light: #EEEEEE;
-
-
-
 }
+
 
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
     font-family: "fira sans", sans-serif;
+
 }
 .container{
     max-width: 1280px;
@@ -18,5 +17,5 @@
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
