--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 :root{
     --primary: #8c38ff;
     --light: #EEEEEE;
+    --dark:#212121;
 }
 
 
@@ -10,6 +11,7 @@
     box-sizing: border-box;
     font-family: "fira sans", sans-serif;
 
+
 }
 .container{
     max-width: 1280px;
@@ -18,4 +20,103 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background-color: var(--dark);
+    padding: 16px 32px;
+    border-bottom: 3px solid var(--primary);
+
+}
+
+h1{
+    color: #EEEEEE;
+    font-size: 28px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+.hamburger{
+    display: block;
+    position: relative;
+    z-index: 1;
+
+    user-select: none;
+
+    appearance: none;
+    border:none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+}
+
+.hamburger span{
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background-color: var(--light);
+    border-radius: 6px;
+    z-index: 1;
+
+    transform-origin: 0 0;
+
+    transition: 0.4s;
+
+}
+
+.hamburger:hover span:nth-child(2) {
+    transform: translateX(10px);
+    background-color: var(--primary);
+} 
+
+
+
+.menu {
+    display: none;
+    flex: 1 1 0%;
+    justify-content: flex-end;
+    margin: 0 -16px;
+
+
+}
+
+.menu a {
+    color: #fff;
+    margin: 0 16px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.4s;
+    padding: 8px 16px;
+    border-radius: 99px;
+}
+
+.menu a.is-active, .menu a:hover{
+    background-color: var(--primary);
+}
+
+.parallax{
+    background-image: url("nightcity04.jpeg"); 
+    width: 100%;
+    height: 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media(min-width: 768px) {
+    .hamburger{
+        display: none;
+    }
+    .menu {
+        display:flex;
+    }
 }
