--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 :root{
-    --primary: #8c38ff;
-    --light: #EEEEEE;
-    --dark:#212121;
+    --primary: #8C9A9E;
+    --light: #3c3b3b;
+    --dark:#000000;
+    --blue:#D4F5F5;
 }
 
 
@@ -10,8 +11,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "fira sans", sans-serif;
-
-
+}
+body{
+    padding-top: 68px;
 }
 .container{
     max-width: 1280px;
@@ -22,6 +24,20 @@
     justify-content: space-around;
 }
 
+article{
+    height: 1000px;
+    background-color: var(--light);
+    font-size:36px
+}
+
+
+.section{
+    text-align:center;
+    margin: 100px;
+
+}
+
+
 nav{
     position: fixed;
     top: 0;
@@ -31,11 +47,13 @@ nav{
     background-color: var(--dark);
     padding: 16px 32px;
     border-bottom: 3px solid var(--primary);
-
+    display: block;
 }
-
+nav a{
+    text-decoration: none;
+}
 h1{
-    color: #EEEEEE;
+    color:#fff;
     font-size: 28px;
     font-weight: 900;
     letter-spacing: 1px;
@@ -45,15 +63,16 @@ h1{
     display: block;
     position: relative;
     z-index: 1;
-
     user-select: none;
-
     appearance: none;
     border:none;
     outline: none;
     background: none;
     cursor: pointer;
 }
+
+
+
 
 .hamburger span{
     display: block;
@@ -65,11 +84,8 @@ h1{
     background-color: var(--light);
     border-radius: 6px;
     z-index: 1;
-
     transform-origin: 0 0;
-
     transition: 0.4s;
-
 }
 
 .hamburger:hover span:nth-child(2) {
@@ -103,14 +119,44 @@ h1{
 }
 
 .parallax{
-    background-image: url("nightcity04.jpeg"); 
-    width: 100%;
+    background:rgba(0,0,0,0.2) url("kancelar.jpeg"); 
+    background-blend-mode: darken;
+    width: 100vw;
     height: 100vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+
+  .dropdown {
+    position: relative;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .show {display: block;}
+
+
+
 
 @media(min-width: 768px) {
     .hamburger{
