--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 :root{
     --primary: #8C9A9E;
-    --light: #3c3b3b;
-    --dark:#000000;
+    --light: #888f9b;
+    --dark:#ffffff;
     --blue:#D4F5F5;
 }
 
@@ -13,10 +13,11 @@
     font-family: "fira sans", sans-serif;
 }
 body{
-    padding-top: 68px;
+    padding-top: 77px;
 }
 .container{
     max-width: 1280px;
+    max-height: 200px;
     margin: 0 auto;
 
     display: flex;
@@ -24,10 +25,18 @@ body{
     justify-content: space-around;
 }
 
+.title{
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    font-size: 3rem;
+}
+
 article{
     height: 1000px;
-    background-color: var(--light);
-    font-size:36px
+    background-color: white;
+    font-size:36px;
+    border-top: 3px solid var(--primary);
 }
 
 
@@ -36,8 +45,6 @@ article{
     margin: 100px;
 
 }
-
-
 nav{
     position: fixed;
     top: 0;
@@ -46,18 +53,45 @@ nav{
     z-index: 99;
     background-color: var(--dark);
     padding: 16px 32px;
-    border-bottom: 3px solid var(--primary);
+    border-bottom: 5px solid var(--light);
     display: block;
 }
 nav a{
     text-decoration: none;
+    color: #000000;
 }
 h1{
-    color:#fff;
-    font-size: 28px;
-    font-weight: 900;
+    color: white;
+    font-size: 1rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    
+}
+h2{
+    color:#000000;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    padding-bottom: 40px;
+    
+}
+h3{
+    font-size: 25px;
     letter-spacing: 1px;
-    text-transform: uppercase;
+    padding-bottom: 15px;
+    
+}
+h4{
+    color: black;
+    font-size: 1.75rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-bottom: 40px;
+    padding-left: 100px;
+}
+.section p{
+    padding-bottom: 20px;
 }
 .hamburger{
     display: block;
@@ -99,13 +133,14 @@ h1{
     display: none;
     flex: 1 1 0%;
     justify-content: flex-end;
-    margin: 0 -16px;
+    margin: 0 45px;
 
 
 }
 
 .menu a {
-    color: #fff;
+    color: black;
+    font-size: 1.2rem;
     margin: 0 16px;
     font-weight: 600;
     text-decoration: none;
@@ -115,11 +150,11 @@ h1{
 }
 
 .menu a.is-active, .menu a:hover{
-    background-color: var(--primary);
+    background-color: var(--light);
 }
 
 .parallax{
-    background:rgba(0,0,0,0.2) url("kancelar.jpeg"); 
+    background:rgba(0, 0, 0, 0) url("kancelar.jpeg"); 
     background-blend-mode: darken;
     width: 100vw;
     height: 100vh;
@@ -130,6 +165,10 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    width: 85%;
+    margin: auto auto;
+    height: 70vh;
 }
 
 
@@ -157,6 +196,73 @@ h1{
 
 
 
+.card-long-flex-wrap {
+    display: flex;
+    justify-content: center;
+}
+
+.card-flex-wrap {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 100px;
+}
+
+.card {
+    width: 80vw;
+    height: 250px;
+    border: 6px solid var(--light);
+    border-radius: 3px;
+    background-color:#f1f1f1;
+    color: white;
+    box-shadow: 0px 0px 16px 0px rgb(0 0 0 / 50%);
+    text-align: center;
+    font-size: 16px;
+    padding: 20px 20px 20px 20px;
+}
+
+.editor ul li:before, .list li:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 21px;
+    height: 21px;
+    background: url(./check.svg);
+}
+
+* ::before {
+    box-sizing: border-box;
+}
+
+.editor ul li{
+    position: relative;
+    color: #071d2b;
+    font-size: 14px;
+    line-height: 1.4;
+    list-style-type: none;
+    margin-bottom: 12px;
+    padding-left: 30px;
+    text-align: left;
+}
+
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 100px;
+}
+@media(max-width: 470px) {
+    .parallax h1{
+        font-size: 20px;
+    }
+
+}
 
 @media(min-width: 768px) {
     .hamburger{
@@ -164,5 +270,13 @@ h1{
     }
     .menu {
         display:flex;
+    }
+}
+
+@media(max-width: 740px) {
+    .card-flex-wrap{
+        flex-direction: column;
+        align-items: center;
+        justify-content: none;
     }
 }
