--- a/Styles/main.css
+++ b/Styles/main.css
@@ -256,6 +256,7 @@ h4{
 
 
 .onas p{
+    display: block;
     text-align: left;
     padding-top:15px;
     font-size: 1.3rem;
@@ -388,30 +389,31 @@ p{
 }
 
 .zdroje {
-    position: absolute;
-    bottom: 7px;
-    right: 60px;
-    font-size: 17px;
-    color: var(--black);
-    border: var(--black) solid 1px;
-    padding: 4px;
-    text-decoration: none;
+    background-image: url("../fotky/stul.webp");
+    background-position: center;
+    background-blend-mode: darken;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 60vh;
 }
 
-.zdroje-seznam {
-    list-style: none;
-    padding: 0;
-}
 
-.zdroje-seznam li {
-    margin: 6px 0;
+.zdroje li {
+    padding-top: 5px;
     font-size: 19px;
-}
-
-.zdroje-seznam li a {
     text-decoration: underline;
     color: var(--black);
 }
+.zdroje ul{
+    padding:0px;
+}
+
 
 @media(max-width: 470px) {
     .parallax h1{
@@ -488,17 +490,16 @@ p{
         margin-left: 0px;
         padding: 0px;
     }
-    .onas ul{
-        padding: 0px;
+    .onas{
+        margin-left: 70px;
+        margin-right: 70px;
     }
 
     .title{
         font-size: 2rem;
     }
-    .onas{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .zdroje li {
+        font-size: 1.1rem;
     }
 }
 @media(max-width: 1110px){
